<resources>
    <string name="app_name">GenussGuru</string>


    <!-- ===============
         LEXICAL STRINGS
         =============== -->

    <string name="weather">Wetter</string>
    <string name="shopping_list">Einkaufsliste</string>
    <string name="difficulty">Schwierigkeit</string>
    <string name="work_time">Arbeitszeit</string>
    <string name="energy">Energie</string>
    <string name="ingredient">Zutat</string>
    <string name="ingredients">Zutaten</string>
    <string name="making">Zubereitung</string>
    <string name="search">Suche</string>
    <string name="search_verb">Suchen</string>
    <string name="error">Fehler!</string>
    <string name="unknown">Unbekannt</string>
    <string name="tags">Tags</string>
    <string name="tag">Tag</string>
    <string name="reset">Zurücksetzen</string>
    <string name="location">Standort</string>


    <!-- ============
         UNIT STRINGS
         ============ -->

    <string name="us_grams">g</string>
    <string name="us_kilograms">kg</string>
    <string name="us_slice">Scheibe/n</string>
    <string name="us_cup">Tasse/n</string>
    <string name="us_teaspoon">TL</string>
    <string name="us_tablespoon">EL</string>
    <string name="us_piece">Stück/e</string>
    <string name="us_prize">Prise/n</string>
    <string name="us_bottle">Fl</string>
    <string name="us_milliliters">ml</string>
    <string name="us_liter">l</string>


    <!-- ==================
         DIFFICULTY STRINGS
         ================== -->

    <string name="dfc_easy">Einfach</string>
    <string name="dfc_medium">Mittel</string>
    <string name="dfc_hard">Schwer</string>

    <!-- ==================
         PERMISSION STRINGS
         ================== -->

    <string name="no_permission_cannot_access_location">Die Standort-Berechtigung wurde nicht erteilt und es kann kein Standort bestimmt werden.</string>
    <string name="error_getting_location">Es ist ein Fehler bei der Standortbestimmung aufgetreten.</string>
    <string name="error_weather_api">Ein Fehler ist bei der Datenabfrage entstanden.</string>
    <string name="location_required">Bitte Standort angeben.</string>
    <string name="permission">Berechtigung anfordern</string>
    <string name="permission_edit">Berechtigungen anpassen</string>
    <string name="permission_granted">Berechtigung erteilt</string>
    <string name="permission_already_granted">Berechtigung bereits erteilt</string>
    <string name="permission_request">Möchten Sie diese Berechtigung wirklich erteilen?</string>
    <string name="permission_denied">Berechtigungsanfrage abgelehnt</string>

    <!-- =======================
         RECIPE-CATEGORY STRINGS
         ======================= -->

    <string name="rc_soup">Suppe</string>
    <string name="rc_sauce">Soße</string>
    <string name="rc_dessert">Dessert</string>
    <string name="rc_salad">Salat</string>
    <string name="rc_main">Hauptspeise</string>
    <string name="rc_starter">Vorspeise</string>
    <string name="rc_snack">Snack</string>
    <string name="rc_drink">Getränk</string>


    <!-- =======================
         RECIPE-PROPERTY STRINGS
         ======================= -->

    <string name="rp_vegetarian">Vegetarisch</string>
    <string name="rp_meat">Fleischhaltig</string>
    <string name="rp_cold">Kalt</string>
    <string name="rp_warm">Warm</string>


    <!-- ================
         FRAGMENT STRINGS
         ================ -->

    <!-- // EntryFragment // -->
    <string name="fragment_entry_title">GenussGuru - Start</string>
    <string name="recipe_overview">Rezeptübersicht</string>
    <string name="recipe_add">Rezept hinzufügen</string>
    <string name="entry_tempC_label">%1$s °C</string>
    <string name="location_denied_message">Der Standortzugriff wurde abgelehnt, daher können die Wetterdaten nicht ermittelt werden.</string>
    <string name="location_permitted_message">Die Wetterdaten werden nun geladen …</string>

    <!-- // RecipeDetailsFragment // -->
    <string name="fragment_recipedetails_title">Rezeptansicht</string>
    <string name="put_on_shopping_list">Auf die Einkaufsliste</string>
    <string name="cnt_portions">%1$d P.</string>
    <string name="ingredients_added_to_shopping_list">%1$d Einträge zur Einkaufsliste hinzugefügt!</string>
    <string name="recipe_kcalories">%1$d kcal</string>
    <string name="recipe_workmin">%1$d min.</string>
    <string name="error_loading_recipe">Fehler beim Laden des Rezepts!</string>

    <!-- // EditRecipeFragment // -->
    <string name="label_editRecipeFragment">Rezept hinzufügen/bearbeiten</string>

    <!-- // RecipeOverviewFragment // -->
    <string name="label_RecipeOverviewFragment">Übersicht Rezepte</string>

    <!-- // ShoppingListFragment // -->
    <string name="plus_symbol">+</string>
    <string name="erledigte_eintraege">Erledigte Einträge</string>
    <string name="eintrag_hinzufuegen">Eintrag hinzufügen</string>
    <string name="please_insert_entry">Bitte Eintrag eingeben</string>
    <string name="a_trash_can">a trash can</string>
    <string name="einkaufsliste">Einkaufsliste</string>

    <!-- // WeatherFragment // -->
    <string name="mein_standort">Mein Standort</string>
    <string name="aktuelle_vorhersage">Aktuelle Vorhersage</string>
    <string name="loading">Lade...</string>


    <!-- ===================
         PLACEHOLDER STRINGS
         =================== -->

    <string name="pl_lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="pl_recipe_title">Cheeseburger mit Pommes</string>
    <string name="pl_recipe_wkt">40 min.</string>
    <string name="pl_recipe_calories">1.590 kcal</string>


    <!-- =============
         DUMMY STRINGS
         ============= -->

    <string name="action_settings">Settings</string>

</resources>
