<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.view.RecipeDetailsFragment" >

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:clickable="true"
        android:src="@android:drawable/ic_menu_edit"
        android:tint="@color/white"
        app:backgroundTint="@color/primary"
        app:rippleColor="@color/white" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="5000dp">

            <ImageView
                android:id="@+id/recipePictureImageView"
                android:layout_width="0dp"
                android:layout_height="256dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:scaleType="centerCrop"
                android:src="@drawable/exampleimage_recipe"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/recipeTitleTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/pl_recipe_title"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/recipePictureImageView"
                app:layout_constraintStart_toStartOf="@+id/recipePictureImageView"
                app:layout_constraintTop_toBottomOf="@+id/recipePictureImageView" />

            <LinearLayout
                android:id="@+id/linearLayout95"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="@+id/recipeTitleTextView"
                app:layout_constraintTop_toBottomOf="@+id/recipeTitleTextView">

                <ImageView
                    android:id="@+id/imageView95"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:src="@drawable/signalbars" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/recipeDifficultyTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/dfc_easy"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/textView952"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/difficulty"
                        android:textSize="10sp" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout96"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="@+id/linearLayout95"
                app:layout_constraintEnd_toStartOf="@+id/linearLayout97"
                app:layout_constraintStart_toEndOf="@+id/linearLayout95"
                app:layout_constraintTop_toTopOf="@+id/linearLayout95">

                <ImageView
                    android:id="@+id/imageView96"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:src="@drawable/clock" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/recipeTimeTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/pl_recipe_wkt"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/textView962"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/work_time"
                        android:textSize="10sp" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout97"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="@+id/linearLayout95"
                app:layout_constraintEnd_toEndOf="@+id/recipePictureImageView"
                app:layout_constraintTop_toTopOf="@+id/linearLayout95">

                <ImageView
                    android:id="@+id/imageView97"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:src="@drawable/flame" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/recipeEnergyTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/pl_recipe_calories"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/textView972"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/energy"
                        android:textSize="10sp" />
                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/ingredients"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/recipeTitleTextView"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout95" />

            <Button
                android:id="@+id/putOnShoppingListButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/put_on_shopping_list"
                app:icon="@drawable/icon_shopping_basket"
                app:layout_constraintEnd_toEndOf="@+id/recipeIngredientsRecyclerView"
                app:layout_constraintStart_toStartOf="@+id/recipeIngredientsRecyclerView"
                app:layout_constraintTop_toBottomOf="@+id/recipeIngredientsRecyclerView" />

            <LinearLayout
                android:layout_width="120dp"
                android:layout_height="30dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="@+id/textView8"
                app:layout_constraintEnd_toEndOf="@+id/recipeIngredientsRecyclerView"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/textView8"
                app:layout_constraintTop_toTopOf="@+id/textView8">

                <ImageView
                    android:id="@+id/minusPortionImageView"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/minus_circle" />

                <TextView
                    android:id="@+id/recipePortionsTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_weight="1"
                    android:text="@string/cnt_portions"
                    android:textAlignment="center"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/plusPortionImageView"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/plus_circle" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recipeIngredientsRecyclerView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="@+id/recipePictureImageView"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/textView8"
                app:layout_constraintTop_toBottomOf="@+id/textView8"
                tools:listitem="@layout/fragment_recipe_ingredient_item" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/making"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/recipeIngredientsRecyclerView"
                app:layout_constraintTop_toBottomOf="@+id/putOnShoppingListButton" />

            <TextView
                android:id="@+id/makingDescriptionTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/pl_lorem_ipsum"
                app:layout_constraintEnd_toEndOf="@+id/recipeIngredientsRecyclerView"
                app:layout_constraintStart_toStartOf="@+id/textView14"
                app:layout_constraintTop_toBottomOf="@+id/textView14" />

            <TextView
                android:id="@+id/tagsTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/tags"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/makingDescriptionTextView"
                app:layout_constraintTop_toBottomOf="@+id/makingDescriptionTextView" />

            <HorizontalScrollView
                android:id="@+id/tagsContainer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/makingDescriptionTextView"
                app:layout_constraintStart_toStartOf="@+id/tagsTextView"
                app:layout_constraintTop_toBottomOf="@+id/tagsTextView">

                <LinearLayout
                    android:id="@+id/tagsLayoutContainer"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal" />
            </HorizontalScrollView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</FrameLayout>