<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ShoppingListFragment">

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp"
            android:id="@+id/linearLayout2">

        <EditText
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:inputType="text"
                android:ems="10"
                android:id="@+id/addEntryInput2"
                android:hint="@string/eintrag_hinzufuegen"
                android:layout_weight="1" />


        <Button
                android:text="@string/plus_symbol"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:textSize="20sp"
                android:textAlignment="center"
                android:id="@+id/addEntryButton2"
                android:foregroundGravity="right" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:id="@+id/activeEntriesList2"/>

    <TextView
            android:text="@string/erledigte_eintraege"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/completedEntriesText2"
            app:layout_constraintTop_toBottomOf="@+id/activeEntriesList2"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="20sp"
            android:textStyle="bold" />

    <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/completedEntriesText2"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:id="@+id/completedEntriesList2" />

</androidx.constraintlayout.widget.ConstraintLayout>